--- a/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/uk_UK/openmediavault.po
@@ -4,15 +4,15 @@
 # 
 # Translators:
 # Андрей Чапалда <ansilent@gmail.com>, 2012
-# zubr139, 2013-2018
+# zubr139, 2013-2019
 # Андрей Чапалда <ansilent@gmail.com>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-23 17:24+0100\n"
-"PO-Revision-Date: 2018-12-23 16:24+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2019-02-07 16:35+0000\n"
+"Last-Translator: zubr139\n"
 "Language-Team: Ukrainian (http://www.transifex.com/votdev/openmediavault/language/uk/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -696,10 +696,10 @@ msgid "Cook Islands"
 msgstr "Острови Кука"
 
 msgid "Copy"
-msgstr ""
+msgstr "Копіювати"
 
 msgid "Copy public SSH key"
-msgstr ""
+msgstr "Копіювати загальнодоступний ключ SSH"
 
 msgid "Copy to clipboard"
 msgstr "Копіювати в буфер обміну"
@@ -1445,7 +1445,7 @@ msgid "Guyana"
 msgstr "Ґайана"
 
 msgid "HTTP 404 error"
-msgstr ""
+msgstr "Помилка HTTP 404"
 
 msgid "HTTP-Proxy"
 msgstr "HTTP-проксі"
@@ -1664,7 +1664,7 @@ msgstr "Встановлення оновлень..."
 msgid ""
 "Installs the public SSH key on a remote system as an authorized key. Make "
 "sure password authentication is enabled on that remote system."
-msgstr ""
+msgstr "Встановлює загальнодоступний ключ SSH на віддаленій системі як авторизований ключ. Переконайтеся, що автентифікація пароля ввімкнена на цій віддаленій системі."
 
 msgid "Interfaces"
 msgstr "Інтерфейси"
@@ -2910,7 +2910,7 @@ msgstr "Виберіть або введіть ім'я користувача...
 msgid ""
 "Select the devices that will be used to create the RAID device. Devices "
 "connected via USB will not be listed (too unreliable)."
-msgstr ""
+msgstr "Виберіть пристрої, які будуть використовуватися для створення пристрою RAID. Пристрої, підключені через USB, не будуть перераховані (надто ненадійні)."
 
 msgid "Self-test logs"
 msgstr "Журнали самотестування"
@@ -3329,7 +3329,7 @@ msgid "The hostname is a label that identifies the system to the network."
 msgstr "Ім'я вузла - ідентифікатор системи в мережі."
 
 msgid "The hostname of the remote system."
-msgstr ""
+msgstr "Ім'я хоста віддаленої системи."
 
 msgid ""
 "The information about available software is out-of-date. You need to reload "
@@ -3377,7 +3377,7 @@ msgid ""
 msgstr "Дозволи на нові файли і каталоги зазвичай регулюються маскою, але параметр успадкування має більш високий пріоритет. Це дозволяє гнучко організувати спільне використання багатьма користувачами одного загального ресурсу."
 
 msgid "The port on which SSH is running on the remote system."
-msgstr ""
+msgstr "Порт, на якому запущено SSH на віддаленій системі."
 
 msgid "The private RSA key in X.509 PEM format."
 msgstr "Секретний ключ RSA в форматі X.509 PEM."
@@ -3391,7 +3391,7 @@ msgid ""
 msgstr "Сховище буде перевірене на наявність нових, видалених або оновлених пакетів програмного забезпечення."
 
 msgid "The requested page was not found."
-msgstr ""
+msgstr "Сторінку не знайдено."
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
