--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,3 +1,9 @@
+openmediavault (4.1.20-1) stable; urgency=low
+
+  * Issue #297: Extract upstream version for comparison.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 16 Feb 2019 18:21:28 +0100
+
 openmediavault (4.1.19-1) stable; urgency=low
 
   * Add the ability to execute RPC code in parallel.
