--- a/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
+++ b/deb/openmediavault/usr/share/openmediavault/locale/it_IT/openmediavault.po
@@ -8,14 +8,14 @@
 # maurorulli <mauro.rulli@gmail.com>, 2012
 # maurorulli <mauro.rulli@gmail.com>, 2012
 # Mario Varelli <mvarelli@biologia.unipi.it>, 2012
-# Paolo Velati <paolo.velati@gmail.com>, 2013-2018
+# Paolo Velati <paolo.velati@gmail.com>, 2013-2019
 msgid ""
 msgstr ""
 "Project-Id-Version: openmediavault\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2018-12-23 17:24+0100\n"
-"PO-Revision-Date: 2018-12-23 16:24+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>\n"
+"PO-Revision-Date: 2019-02-22 13:06+0000\n"
+"Last-Translator: Paolo Velati <paolo.velati@gmail.com>\n"
 "Language-Team: Italian (http://www.transifex.com/votdev/openmediavault/language/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -699,10 +699,10 @@ msgid "Cook Islands"
 msgstr "Isole Cook"
 
 msgid "Copy"
-msgstr ""
+msgstr "Copia"
 
 msgid "Copy public SSH key"
-msgstr ""
+msgstr "Copia chiave pubblica SSH"
 
 msgid "Copy to clipboard"
 msgstr "Copia negli appunti"
@@ -1448,7 +1448,7 @@ msgid "Guyana"
 msgstr "Guyana"
 
 msgid "HTTP 404 error"
-msgstr ""
+msgstr "Errore HTTP 404"
 
 msgid "HTTP-Proxy"
 msgstr "HTTP-Proxy"
@@ -1667,7 +1667,7 @@ msgstr "Installazione aggiornamenti..."
 msgid ""
 "Installs the public SSH key on a remote system as an authorized key. Make "
 "sure password authentication is enabled on that remote system."
-msgstr ""
+msgstr "Installa la chiave pubblica SSH su un sistema remoto come chiave autorizzata. Assicurarsi che l'autenticazione della password sia abilitata."
 
 msgid "Interfaces"
 msgstr "Interfacce"
@@ -2913,7 +2913,7 @@ msgstr "Scegli o inserisci un nome utente..."
 msgid ""
 "Select the devices that will be used to create the RAID device. Devices "
 "connected via USB will not be listed (too unreliable)."
-msgstr ""
+msgstr "Selezionare i dispositivi che verranno utilizzati per creare il dispositivo RAID. I dispositivi collegati via USB non saranno elencati (troppo inaffidabili)."
 
 msgid "Self-test logs"
 msgstr "Logs del self-test"
@@ -3332,7 +3332,7 @@ msgid "The hostname is a label that identifies the system to the network."
 msgstr "L'hostname è un nome che identifica il sistema sulla rete."
 
 msgid "The hostname of the remote system."
-msgstr ""
+msgstr "Il nome host del sistema remoto."
 
 msgid ""
 "The information about available software is out-of-date. You need to reload "
@@ -3380,7 +3380,7 @@ msgid ""
 msgstr "I permessi sui nuovi file e directory sono normalmente impostati dal create mask e directory mask ma i parametri dei permessi ereditati li sovrascrivono. Questo può essere particolarmente utile sui sistemi con molti utenti per usare una singola condivisione con flessibilità da ogni utente."
 
 msgid "The port on which SSH is running on the remote system."
-msgstr ""
+msgstr "La porta su cui SSH è in esecuzione sul sistema remoto."
 
 msgid "The private RSA key in X.509 PEM format."
 msgstr "La chiave privata RSA nel formato X.509."
@@ -3394,7 +3394,7 @@ msgid ""
 msgstr "Il repository verrà controllato per pacchetti nuovi, rimossi oppure aggiornati."
 
 msgid "The requested page was not found."
-msgstr ""
+msgstr "La pagina richiesta non è stata trovata."
 
 msgid ""
 "The requirement that the SSL session from the control connection is reused "
