--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -27,6 +27,14 @@ openmediavault (5.0-1) unstable; urgency=low
 
  -- Volker Theile <volker.theile@openmediavault.org>  Tue, 08 May 2018 22:06:11 +0200
 
+openmediavault (4.1.20-1) stable; urgency=low
+
+  * Announce SMB/CIFS shares via WSD, so the are listed in Windows 10.
+  * Issue #297: Extract upstream version for comparison.
+  * Issue #324: Fix typo in S.M.A.R.T. attributes data table.
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 16 Feb 2019 18:21:28 +0100
+
 openmediavault (4.1.19-1) stable; urgency=low
 
   * Add the ability to execute RPC code in parallel.
