--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,5 +1,6 @@
 openmediavault (4.1.20-1) stable; urgency=low
 
+  * Update locales.
   * Announce SMB/CIFS shares via WSD, so the are listed in Windows 10.
   * Issue #297: Extract upstream version for comparison.
   * Issue #324: Fix typo in S.M.A.R.T. attributes data table.
