--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,7 +1,13 @@
+openmediavault (4.1.21-1) stable; urgency=low
+
+  *
+
+ -- Volker Theile <volker.theile@openmediavault.org>  Sat, 23 Mar 2019 18:52:18 +0100
+
 openmediavault (4.1.20-1) stable; urgency=low
 
   * Update locales.
-  * Announce SMB/CIFS shares via WSD, so the are listed in Windows 10.
+  * Announce SMB/CIFS shares via WSD, so they are listed in Windows 10.
   * Issue #297: Extract upstream version for comparison.
   * Issue #324: Fix typo in S.M.A.R.T. attributes data table.
 
