--- a/deb/openmediavault-tftp/usr/share/openmediavault/locale/hu_HU/openmediavault-tftp.po
+++ b/deb/openmediavault-tftp/usr/share/openmediavault/locale/hu_HU/openmediavault-tftp.po
@@ -4,8 +4,8 @@
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # 
 # Translators:
-# Sári Gábor <sari.gabor@gmail.com>, 2017
 # Volker <votdev@gmx.de>, 2017
+# Sári Gábor <sari.gabor@gmail.com>, 2018
 # 
 #, fuzzy
 msgid ""
@@ -14,7 +14,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-08-30 08:41+0200\n"
 "PO-Revision-Date: 2017-03-31 07:22+0000\n"
-"Last-Translator: Volker <votdev@gmx.de>, 2017\n"
+"Last-Translator: Sári Gábor <sari.gabor@gmail.com>, 2018\n"
 "Language-Team: Hungarian (Hungary) (https://www.transifex.com/votdev/teams/14254/hu_HU/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
