--- a/deb/openmediavault/debian/changelog
+++ b/deb/openmediavault/debian/changelog
@@ -1,6 +1,7 @@
 openmediavault (3.0.100) stable; urgency=low
 
-  * 
+  * Add Debian security repository.
+  * Disable jessie-backports repository.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Mon, 14 May 2018 07:30:56 +0200
 
